Expandidas preguntas frecuentes sobre referidos y afiliados: 6 preguntas separadas y detalladas

--- a/index.html
+++ b/index.html
@@ -353,10 +353,50 @@
           },
           {
             "@type": "Question",
-            "name": "¿Tienen programas de referidos o afiliados?",
+            "name": "¿Tienen programa de referidos?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Sí, tenemos programas tanto de referidos como de afiliados para que puedas ganar dinero recomendando Delfín Check-in. Programa de Referidos: Gana dinero cada vez que alguien se registre usando tu enlace de referido. Programa de Afiliados: Ideal para blogs, influencers y empresas que quieren promocionar nuestro software. Comisiones atractivas por cada conversión. Ambos programas son completamente gratuitos de unirte y te permiten generar ingresos pasivos recomendando Delfín Check-in a otros propietarios de alojamientos."
+              "text": "Sí, tenemos un Programa de Referidos exclusivo para propietarios que usan Delfín Check-in. Puedes recomendar nuestra plataforma a otros propietarios y ganar meses gratis en nuestros planes. Recompensas disponibles: 5 referidos registrados = 1 mes gratis del Plan Check-in, 1 referido que paga Plan Check-in = 1 mes gratis del Plan Check-in, 3 referidos activos en Plan Check-in = 1 mes gratis del Plan Pro, 5 referidos activos en Plan Pro = 2 meses gratis del Plan Pro. Las recompensas se aplican como créditos de tiempo que se descuentan automáticamente antes de cualquier cobro mensual."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Tienen programa de afiliados?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí, tenemos un Programa de Afiliados abierto a todo el mundo (no necesitas ser propietario). Puedes recomendar Delfín Check-in y ganar 30% de comisión recurrente mensual por cada cliente activo que refieras. Comisiones por plan: Plan Check-in (8€/mes) = 2,40€/mes de comisión, Plan Pro (29,99€/mes) = 8,997€/mes de comisión. Las comisiones se pagan automáticamente a tu cuenta bancaria cada mes mientras tus clientes se mantengan activos. Ideal para blogs, influencers, empresas y cualquier persona que conozca propietarios de alojamientos."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cuál es la diferencia entre el programa de referidos y el de afiliados?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "La principal diferencia es quién puede participar y cómo se recompensa. Programa de Referidos: Solo para propietarios que usan Delfín Check-in, ganas meses gratis (créditos de tiempo) que se descuentan de tu factura, recompensas basadas en número de referidos y planes que contraten, disponible desde tu panel de administración. Programa de Afiliados: Abierto a todo el mundo (no necesitas ser propietario), ganas 30% de comisión recurrente mensual en efectivo, comisiones pagadas directamente a tu cuenta bancaria, ideal para blogs, influencers y empresas."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Puedo participar en ambos programas a la vez?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí, puedes participar en ambos programas simultáneamente si cumples los requisitos. Si eres propietario y usas Delfín Check-in, puedes participar en el Programa de Referidos para ganar meses gratis y también en el Programa de Afiliados para ganar comisiones en efectivo. Sin embargo, no puedes referir a la misma persona en ambos programas. Cada persona solo puede estar vinculada a un programa (referidos o afiliados), no a ambos a la vez. Si no eres propietario, solo puedes participar en el Programa de Afiliados."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cuándo empiezo a recibir recompensas o comisiones?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Programa de Referidos: Las recompensas (meses gratis) se otorgan automáticamente cuando se cumplen las condiciones: al conseguir 5 referidos registrados recibes 1 mes gratis del Plan Check-in, cuando un referido paga el Plan Check-in por primera vez recibes 1 mes gratis del Plan Check-in, con 3 referidos activos en Plan Check-in recibes 1 mes gratis del Plan Pro, con 5 referidos activos en Plan Pro recibes 2 meses gratis del Plan Pro. Programa de Afiliados: Las comisiones empiezan a generarse cuando un cliente referido paga un plan de pago (Check-in o Pro). Recibirás 30% de comisión recurrente cada mes mientras el cliente se mantenga activo. Los pagos se realizan automáticamente a tu cuenta bancaria una vez configurada. Nota: Estamos en fase de pre-lanzamiento, por lo que los programas estarán completamente activos cuando lancemos el PMS oficialmente."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cómo consigo mi link de referido o afiliado?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Link de Referidos: Si eres propietario y usas Delfín Check-in, podrás acceder a tu link de referido único desde la sección Referidos en tu panel de administración. Este link estará disponible cuando lancemos el PMS oficialmente. Link de Afiliados: Para obtener tu link de afiliado, debes registrarte en el programa de afiliados. Una vez registrado, tendrás acceso a tu panel personal de afiliados donde encontrarás tu link único para compartir. Puedes registrarte ahora en affiliates.delfincheckin.com. Ambos links son únicos y rastrean automáticamente a las personas que se registran usando tu enlace, vinculándolas contigo para las recompensas o comisiones."
             }
           }
         ]
@@ -2011,18 +2051,104 @@
         </p>
       </details>
       <details>
-        <summary>¿Tienen programas de referidos o afiliados?</summary>
+        <summary>¿Tienen programa de referidos?</summary>
         <p>
-          Sí, tenemos programas tanto de <strong>referidos</strong> como de <strong>afiliados</strong> para que puedas ganar dinero recomendando Delfín Check-in.
+          Sí, tenemos un <strong>Programa de Referidos</strong> exclusivo para propietarios que usan Delfín Check-in. 
+          Puedes recomendar nuestra plataforma a otros propietarios y ganar <strong>meses gratis</strong> en nuestros planes.
           <br><br>
-          <strong>💰 Programa de Referidos:</strong> Gana dinero cada vez que alguien se registre usando tu enlace de referido. 
+          <strong>Recompensas disponibles:</strong>
+          <br>• 5 referidos registrados = 1 mes gratis del Plan Check-in
+          <br>• 1 referido que paga Plan Check-in = 1 mes gratis del Plan Check-in
+          <br>• 3 referidos activos en Plan Check-in = 1 mes gratis del Plan Pro
+          <br>• 5 referidos activos en Plan Pro = 2 meses gratis del Plan Pro
+          <br><br>
+          Las recompensas se aplican como créditos de tiempo que se descuentan automáticamente antes de cualquier cobro mensual. 
           <a href="/referidos.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más información sobre el programa de referidos</a>
+        </p>
+      </details>
+      <details>
+        <summary>¿Tienen programa de afiliados?</summary>
+        <p>
+          Sí, tenemos un <strong>Programa de Afiliados</strong> abierto a todo el mundo (no necesitas ser propietario). 
+          Puedes recomendar Delfín Check-in y ganar <strong>30% de comisión recurrente mensual</strong> por cada cliente activo que refieras.
           <br><br>
-          <strong>🤝 Programa de Afiliados:</strong> Ideal para blogs, influencers y empresas que quieren promocionar nuestro software. 
-          Comisiones atractivas por cada conversión. 
+          <strong>Comisiones por plan:</strong>
+          <br>• Plan Check-in (8€/mes) = 2,40€/mes de comisión
+          <br>• Plan Pro (29,99€/mes) = 8,997€/mes de comisión
+          <br><br>
+          Las comisiones se pagan automáticamente a tu cuenta bancaria cada mes mientras tus clientes se mantengan activos. 
+          Ideal para blogs, influencers, empresas y cualquier persona que conozca propietarios de alojamientos. 
           <a href="/afiliados.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más información sobre el programa de afiliados</a>
+        </p>
+      </details>
+      <details>
+        <summary>¿Cuál es la diferencia entre el programa de referidos y el de afiliados?</summary>
+        <p>
+          La principal diferencia es <strong>quién puede participar</strong> y <strong>cómo se recompensa</strong>:
           <br><br>
-          Ambos programas son completamente gratuitos de unirte y te permiten generar ingresos pasivos recomendando Delfín Check-in a otros propietarios de alojamientos.
+          <strong>💰 Programa de Referidos:</strong>
+          <br>• Solo para propietarios que usan Delfín Check-in
+          <br>• Ganas meses gratis (créditos de tiempo) que se descuentan de tu factura
+          <br>• Recompensas basadas en número de referidos y planes que contraten
+          <br>• Disponible desde tu panel de administración
+          <br><br>
+          <strong>🤝 Programa de Afiliados:</strong>
+          <br>• Abierto a todo el mundo (no necesitas ser propietario)
+          <br>• Ganas 30% de comisión recurrente mensual en efectivo
+          <br>• Comisiones pagadas directamente a tu cuenta bancaria
+          <br>• Ideal para blogs, influencers y empresas
+          <br><br>
+          <a href="/referidos.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más sobre referidos</a> | 
+          <a href="/afiliados.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más sobre afiliados</a>
+        </p>
+      </details>
+      <details>
+        <summary>¿Puedo participar en ambos programas a la vez?</summary>
+        <p>
+          <strong>Sí, puedes participar en ambos programas simultáneamente</strong> si cumples los requisitos:
+          <br><br>
+          Si eres propietario y usas Delfín Check-in, puedes:
+          <br>• Participar en el <strong>Programa de Referidos</strong> para ganar meses gratis
+          <br>• Participar también en el <strong>Programa de Afiliados</strong> para ganar comisiones en efectivo
+          <br><br>
+          Sin embargo, <strong>no puedes referir a la misma persona en ambos programas</strong>. Cada persona solo puede estar vinculada a un programa (referidos o afiliados), no a ambos a la vez.
+          <br><br>
+          Si no eres propietario, solo puedes participar en el Programa de Afiliados.
+        </p>
+      </details>
+      <details>
+        <summary>¿Cuándo empiezo a recibir recompensas o comisiones?</summary>
+        <p>
+          Depende del programa:
+          <br><br>
+          <strong>💰 Programa de Referidos:</strong>
+          <br>Las recompensas (meses gratis) se otorgan automáticamente cuando se cumplen las condiciones:
+          <br>• Al conseguir 5 referidos registrados → recibes 1 mes gratis del Plan Check-in
+          <br>• Cuando un referido paga el Plan Check-in por primera vez → recibes 1 mes gratis del Plan Check-in
+          <br>• Con 3 referidos activos en Plan Check-in → recibes 1 mes gratis del Plan Pro
+          <br>• Con 5 referidos activos en Plan Pro → recibes 2 meses gratis del Plan Pro
+          <br><br>
+          <strong>🤝 Programa de Afiliados:</strong>
+          <br>Las comisiones empiezan a generarse cuando un cliente referido <strong>paga un plan de pago</strong> (Check-in o Pro). 
+          Recibirás 30% de comisión recurrente cada mes mientras el cliente se mantenga activo. 
+          Los pagos se realizan automáticamente a tu cuenta bancaria una vez configurada.
+          <br><br>
+          <strong>Nota:</strong> Estamos en fase de pre-lanzamiento, por lo que los programas estarán completamente activos cuando lancemos el PMS oficialmente.
+        </p>
+      </details>
+      <details>
+        <summary>¿Cómo consigo mi link de referido o afiliado?</summary>
+        <p>
+          <strong>💰 Link de Referidos:</strong>
+          <br>Si eres propietario y usas Delfín Check-in, podrás acceder a tu <strong>link de referido único</strong> desde la sección "Referidos" en tu panel de administración. 
+          Este link estará disponible cuando lancemos el PMS oficialmente.
+          <br><br>
+          <strong>🤝 Link de Afiliados:</strong>
+          <br>Para obtener tu link de afiliado, debes <strong>registrarte en el programa de afiliados</strong>. 
+          Una vez registrado, tendrás acceso a tu panel personal de afiliados donde encontrarás tu link único para compartir. 
+          Puedes registrarte ahora en <a href="https://affiliates.delfincheckin.com/register" target="_blank" style="color: var(--brand); text-decoration: underline; font-weight: 600;">affiliates.delfincheckin.com</a>
+          <br><br>
+          Ambos links son únicos y rastrean automáticamente a las personas que se registran usando tu enlace, vinculándolas contigo para las recompensas o comisiones.
         </p>
       </details>
     </section>
