Actualizar textos de landing page: corregir información de planes y eliminar textos confusos

--- a/index.html
+++ b/index.html
@@ -931,7 +931,6 @@
             </div>
             <button onclick="navigator.clipboard.writeText('https://delfincheckin.com/pay/apt-malaga-12may-14may')" class="btn" style="border-radius: 999px;">Copiar</button>
           </div>
-          <p style="margin: 0; font-size: 13px; color: #94a3b8;">Todos los pagos pasan por Stripe con SCA, recibes liquidación diaria y controlas las devoluciones desde tu panel.</p>
         </div>
       </div>
     </section>
@@ -1454,7 +1453,6 @@
             <li>✅ <strong>Envío automático al Ministerio del Interior</strong></li>
             <li>✅ <strong>Registro de viajeros (MIR)</strong></li>
             <li>✅ <strong>Cumplimiento normativo RD 933/2021</strong></li>
-            <li>✅ Sin anuncios</li>
             <li>✅ Soporte prioritario</li>
           </ul>
           <div class="cta" style="margin-top: 24px;">
@@ -1478,6 +1476,7 @@
           </p>
           <ul class="features" style="margin: 20px 0;">
             <li>✅ Todo lo del Plan Check-in</li>
+            <li>✅ Sin anuncios</li>
             <li>✅ Funciones avanzadas</li>
             <li>✅ Automatizaciones</li>
             <li>✅ Reportes avanzados</li>
@@ -1494,7 +1493,7 @@
         <h4 style="margin: 0 0 12px 0; color: #1e40af; font-weight: 700; font-size: 18px;">ℹ️ Transparencia total</h4>
         <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 1.8;">
           <li><strong>Plan Gratuito:</strong> Se financia con anuncios elegantes y discretos. Sin coste para ti, sin límites de tiempo.</li>
-          <li><strong>Plan Check-in:</strong> Siempre 8€/mes. Incluye envío automático al Ministerio del Interior. Sin anuncios.</li>
+          <li><strong>Plan Check-in:</strong> Siempre 8€/mes. Incluye envío automático al Ministerio del Interior.</li>
           <li><strong>Cumplimiento legal:</strong> El Plan Check-in garantiza el cumplimiento del RD 933/2021 y normativas aplicables.</li>
           <li><strong>Sin sorpresas:</strong> Sabes exactamente qué obtienes y qué cuesta desde el primer día.</li>
         </ul>
@@ -1511,7 +1510,7 @@
         </p>
         <p style="color: rgba(255,255,255,0.9); font-size: 18px; margin-top: 12px; line-height: 1.6;">
           Estamos en la fase final de desarrollo. <strong>Regístrate ahora</strong> y sé de los primeros en probarlo cuando lancemos. 
-          <br><strong style="font-size: 20px;">Los primeros usuarios tendrán el PMS completo gratis para siempre.</strong>
+          <br><strong style="font-size: 20px;">Los primeros usuarios tendrán el software con el plan gratis para siempre.</strong>
           <br><span style="font-size: 16px; opacity: 0.9;">El módulo de check-in digital (envío al Ministerio del Interior) siempre costará 8€/mes.</span>
         </p>
         <div style="margin-top: 24px; padding: 16px; background: rgba(255,255,255,0.15); border-radius: 12px; backdrop-filter: blur(10px);">
@@ -1525,7 +1524,7 @@
           <h3 style="color: #0f172a; font-size: 28px; font-weight: 800; margin-bottom: 8px;">Sé de los primeros</h3>
           <p style="color: #64748b; font-size: 18px; line-height: 1.6;">
             Únete a la lista de espera y recibe acceso prioritario cuando lancemos. 
-            <strong style="color: #2563eb;">Los primeros usuarios tendrán el Plan Gratuito completo para siempre.</strong>
+            <strong style="color: #2563eb;">Los primeros usuarios tendrán el Plan Gratuito para siempre.</strong>
           </p>
         </div>
         
@@ -1560,7 +1559,7 @@
             onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(37, 99, 235, 0.4)'"
             onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(37, 99, 235, 0.3)'"
           >
-            <span id="waitlistSubmitText">🎁 Quiero gratis para siempre</span>
+            <span id="waitlistSubmitText">Apúntate ya!</span>
             <span id="waitlistLoading" style="display: none;">Enviando...</span>
           </button>
           <div id="waitlistMessage" style="margin: 0; padding: 0; border-radius: 8px; display: none; text-align: left;"></div>
@@ -1580,7 +1579,7 @@
                 <li><strong>✅ App móvil</strong> - iOS y Android (próximamente)</li>
                 <li><strong>💡 Financiado con anuncios</strong> - Elegantes y discretos, sin coste para ti</li>
                 <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;">
-                  <strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: PMS completo gratis para siempre</strong>
+                  <strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: tendrás el software con el plan gratis para siempre</strong>
                 </li>
                 <li style="color: #dc2626; font-size: 14px; margin-top: 12px; font-weight: 600;">
                   ❌ <strong>No incluye:</strong> Check-in digital (8€/mes) ni envío al Ministerio del Interior
@@ -1815,7 +1814,7 @@
         <summary>¿Puedo probar el sistema?</summary>
         <p>
           Estamos en fase de pre-lanzamiento. Regístrate con tu email y te avisaremos cuando esté listo. 
-          Los primeros usuarios podrán probar el <strong>Plan Gratuito completo</strong> de forma gratuita para siempre.
+          Los primeros usuarios podrán probar el <strong>Plan Gratuito</strong> de forma gratuita para siempre.
           <br><br>
           El módulo de check-in digital (envío al Ministerio del Interior) siempre tendrá un coste de 8€/mes, incluso para primeros usuarios.
         </p>
