Corregir textos y estilos en páginas de referidos y afiliados
- Arreglar color del texto debajo de títulos (visibilidad)
- Actualizar textos sobre planes y referidos únicos
- Eliminar menciones a Stripe, usar Delfín Check-in
- Corregir lógica de cancelación y reactivación
- Añadir información sobre IVA en comisiones de afiliados
- Especificar 'alquiler vacacional' en textos
- Eliminar 'automáticos' de notificaciones por email
- Actualizar elegibilidad y condiciones

--- a/afiliados.html
+++ b/afiliados.html
@@ -81,7 +81,8 @@
       font-size: clamp(16px, 2.5vw, 20px);
       position: relative;
       z-index: 1;
-      opacity: 0.95;
+      opacity: 1;
+      color: rgba(255, 255, 255, 0.95);
       max-width: 800px;
       margin: 0 auto;
     }
@@ -323,7 +324,7 @@
       <h2>💎 ¿Qué es el Programa de Afiliados?</h2>
       <p>
         El <strong>Programa de Afiliados</strong> está abierto a <strong>todo el mundo</strong>, no necesitas ser propietario ni usar Delfín Check-in. 
-        Si conoces a propietarios de alojamientos que podrían beneficiarse de nuestro PMS, puedes recomendarles Delfín Check-in y ganar <strong>30% de comisión recurrente</strong> por cada cliente activo que refieras.
+        Si conoces a propietarios de alojamientos de alquiler vacacional que podrían beneficiarse de nuestro PMS, puedes recomendarles Delfín Check-in y ganar <strong>30% de comisión recurrente</strong> por cada cliente activo que refieras.
       </p>
       <p>
         Cada vez que alguien se registre usando tu link de afiliado, quedarás vinculado como su afiliado. 
@@ -334,7 +335,7 @@
         <div class="rate">30%</div>
         <p class="description">
           <strong>Comisión recurrente mensual</strong><br>
-          Sin IVA. Pagos automáticos a tu cuenta bancaria mientras tus clientes se mantengan activos.
+          La comisión del 30% se calcula sobre el precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española. Los pagos se realizan automáticamente a tu cuenta bancaria mientras tus clientes se mantengan activos.
         </p>
       </div>
 
@@ -367,6 +368,7 @@
         <h3 style="margin-top: 0; color: #64748b;">ℹ️ Plan Gratuito</h3>
         <p style="margin-bottom: 0;">
           El <strong>Plan Gratuito</strong> no genera comisiones. Las comisiones solo se pagan cuando los clientes referidos están pagando planes de pago (Check-in o Pro).
+          <strong>Importante:</strong> Si un cliente entra con tu enlace de afiliado y comienza en el plan gratuito, si en algún momento se convierte en un propietario del plan de pago, ahí se activará la comisión mensual.
         </p>
       </div>
 
@@ -378,8 +380,8 @@
         <li><strong>Cálculo automático:</strong> Cada mes, cuando un cliente referido paga su plan, se calcula automáticamente tu 30% de comisión.</li>
         <li><strong>Pagos mensuales:</strong> Las comisiones se acumulan mensualmente y se pagan automáticamente a tu cuenta bancaria (una vez configurada).</li>
         <li><strong>Recurrente:</strong> Mientras el cliente se mantenga activo y pagando, seguirás recibiendo comisiones mes a mes.</li>
-        <li><strong>Sin IVA:</strong> Las comisiones se calculan sin IVA (30% del precio base del plan).</li>
-        <li><strong>Cancelación:</strong> Si un cliente cancela su plan, las comisiones se detienen automáticamente. Si se reactiva más tarde, las comisiones se reanudan.</li>
+        <li><strong>IVA y tributación:</strong> La comisión del 30% se calcula sobre el precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española. Te recomendamos consultar con un asesor fiscal para determinar tu situación específica.</li>
+        <li><strong>Cancelación:</strong> Si un cliente cancela su plan, las comisiones se detienen automáticamente y el cliente sale del programa de afiliados. Aunque se reactive más tarde, ya no contará para comisiones, igual que en el programa de referidos.</li>
       </ul>
 
       <h2>📊 Panel de Afiliados</h2>
@@ -418,9 +420,8 @@
       </div>
 
       <h2>📧 Notificaciones por Email</h2>
-      <p>Recibirás emails automáticos cuando:</p>
+      <p>Recibirás emails cuando:</p>
       <ul>
-        <li>Alguien haga click en tu link de afiliado</li>
         <li>Un cliente se registre usando tu link</li>
         <li>Un cliente referido active un plan de pago</li>
         <li>Se genere una nueva comisión</li>
@@ -440,8 +441,8 @@
       <h3>Comisiones</h3>
       <ul>
         <li>Las comisiones solo se generan por planes de pago (Check-in y Pro), no por el plan gratuito.</li>
-        <li>La comisión es del 30% del precio base del plan, sin IVA.</li>
-        <li>Las comisiones son recurrentes mientras el cliente se mantenga activo.</li>
+        <li>La comisión es del 30% del precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española.</li>
+        <li>Las comisiones son recurrentes mientras el cliente se mantenga activo en el plan de pago.</li>
         <li>Los pagos se realizan automáticamente mediante transferencias bancarias.</li>
         <li>Delfín Check-in se reserva el derecho de auditar y eliminar comisiones fraudulentas.</li>
       </ul>
@@ -475,7 +476,7 @@
           Los usuarios que refieras entrarán en nuestra waitlist y, cuando lancemos el PMS y empiecen a pagar, empezarás a recibir comisiones automáticamente.
         </p>
         <p style="font-size: 16px; margin-top: 16px;">
-          No necesitas ser propietario ni usar nuestro PMS. Si conoces a propietarios de alojamientos que podrían beneficiarse de Delfín Check-in, 
+          No necesitas ser propietario ni usar nuestro PMS. Si conoces a propietarios de alojamientos de alquiler vacacional que podrían beneficiarse de Delfín Check-in, 
           comparte tu link de afiliado y empieza a ganar comisiones recurrentes.
         </p>
         <a href="https://affiliates.delfincheckin.com/register" class="btn primary">Registrarse como Afiliado</a>
