Simplificar información de IVA en landing page de afiliados
- Hacer la información de IVA más ambigua en la landing page
- Referir al panel de afiliados para configuración detallada

--- a/afiliados.html
+++ b/afiliados.html
@@ -335,7 +335,7 @@
         <div class="rate">30%</div>
         <p class="description">
           <strong>Comisión recurrente mensual</strong><br>
-          La comisión del 30% se calcula sobre el precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española. Los pagos se realizan automáticamente a tu cuenta bancaria mientras tus clientes se mantengan activos.
+          La comisión del 30% se calcula sobre el precio base del plan. Los pagos se realizan automáticamente a tu cuenta bancaria mientras tus clientes se mantengan activos. La gestión de IVA e impuestos se configura en tu panel de afiliados según tu situación fiscal.
         </p>
       </div>
 
@@ -380,7 +380,7 @@
         <li><strong>Cálculo automático:</strong> Cada mes, cuando un cliente referido paga su plan, se calcula automáticamente tu 30% de comisión.</li>
         <li><strong>Pagos mensuales:</strong> Las comisiones se acumulan mensualmente y se pagan automáticamente a tu cuenta bancaria (una vez configurada).</li>
         <li><strong>Recurrente:</strong> Mientras el cliente se mantenga activo y pagando, seguirás recibiendo comisiones mes a mes.</li>
-        <li><strong>IVA y tributación:</strong> La comisión del 30% se calcula sobre el precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española. Te recomendamos consultar con un asesor fiscal para determinar tu situación específica.</li>
+        <li><strong>IVA y tributación:</strong> Las comisiones están sujetas a la normativa fiscal española. La gestión de IVA e impuestos se configura en tu panel de afiliados según tu situación (particular o profesional/empresa). Consulta con un asesor fiscal para determinar tu situación específica.</li>
         <li><strong>Cancelación:</strong> Si un cliente cancela su plan, las comisiones se detienen automáticamente y el cliente sale del programa de afiliados. Aunque se reactive más tarde, ya no contará para comisiones, igual que en el programa de referidos.</li>
       </ul>
 
@@ -441,7 +441,7 @@
       <h3>Comisiones</h3>
       <ul>
         <li>Las comisiones solo se generan por planes de pago (Check-in y Pro), no por el plan gratuito.</li>
-        <li>La comisión es del 30% del precio base del plan. Si eres profesional o empresa, deberás emitir factura con IVA (21%) sobre la comisión. Si eres particular, se aplicará la retención de IRPF correspondiente según la normativa fiscal española.</li>
+        <li>La comisión es del 30% del precio base del plan. La gestión de IVA e impuestos se configura en tu panel de afiliados según tu situación fiscal (particular o profesional/empresa).</li>
         <li>Las comisiones son recurrentes mientras el cliente se mantenga activo en el plan de pago.</li>
         <li>Los pagos se realizan automáticamente mediante transferencias bancarias.</li>
         <li>Delfín Check-in se reserva el derecho de auditar y eliminar comisiones fraudulentas.</li>
