Añadir información sobre enlaces de pago y microsite en sección waitlist
- Añadir sección sobre funcionalidades adicionales en planes de pago
- Información sobre enlaces de pago personalizados
- Información sobre microsite para reservas directas
- Indicar que están disponibles en planes Check-in y Pro

--- a/index.html
+++ b/index.html
@@ -2283,6 +2283,26 @@
             </div>
           </div>
         </div>
+
+        <!-- Funcionalidades adicionales en planes de pago -->
+        <div style="margin-top: 24px; padding: 20px; background: linear-gradient(135deg, rgba(37,99,235,0.08) 0%, rgba(16,185,129,0.08) 100%); border-radius: 12px; border-left: 4px solid #2563eb;">
+          <div style="display: flex; align-items: start; gap: 12px;">
+            <div style="font-size: 24px;">💎</div>
+            <div>
+              <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 18px;">🚀 Funcionalidades adicionales en planes de pago</h4>
+              <p style="margin: 0 0 12px 0; color: #1e40af; font-size: 15px; line-height: 1.6;">
+                Con los planes de pago (Check-in o Pro) también tendrás acceso a:
+              </p>
+              <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 2;">
+                <li><strong>🔗 Crea enlaces de pago personalizados</strong> - Define fechas, importe acordado y genera un enlace único de pago. Compártelo por WhatsApp o email y el huésped paga de forma segura. El dinero entra directamente en tu cuenta bancaria.</li>
+                <li><strong>🌐 Microsite para reservas directas</strong> - Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas. Con pagos directos las comisiones se reducen y el dinero entra en tu cuenta sin esperas.</li>
+              </ul>
+              <p style="margin: 12px 0 0 0; color: #64748b; font-size: 14px; line-height: 1.5;">
+                Estas funcionalidades están disponibles en los planes Check-in (8€/mes) y Pro (29,99€/mes), y son opciones muy interesantes para los propietarios que quieren tener más control sobre sus reservas y pagos.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
