Mejorar texto del botón y título de waitlist para mayor atención
- Cambiar botón de 'Apúntate ya!' a '🎁 Quiero gratis para siempre'
- Cambiar título a '🎁 Consigue el plan gratis para siempre'
- Hacer el call-to-action más atractivo y llamativo

--- a/index.html
+++ b/index.html
@@ -2216,7 +2216,7 @@
       <div class="card" style="background: white; max-width: 600px; margin: 0 auto; padding: 32px;">
         <div style="text-align: center; margin-bottom: 24px;">
           <div style="font-size: 48px; margin-bottom: 12px;">🎯</div>
-          <h3 style="color: #0f172a; font-size: 28px; font-weight: 800; margin-bottom: 8px;">⚠️ Apúntate ya: Gratis para siempre</h3>
+          <h3 style="color: #0f172a; font-size: 28px; font-weight: 800; margin-bottom: 8px;">🎁 Consigue el plan gratis para siempre</h3>
           <p style="color: #64748b; font-size: 18px; line-height: 1.6;">
             Únete a la lista de espera y recibe acceso prioritario cuando lancemos. 
             <strong style="color: #2563eb;">Los primeros usuarios tendrán el Plan Gratuito para siempre.</strong>
@@ -2254,7 +2254,7 @@
             onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(37, 99, 235, 0.4)'"
             onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(37, 99, 235, 0.3)'"
           >
-            <span id="waitlistSubmitText">Apúntate ya!</span>
+            <span id="waitlistSubmitText">🎁 Quiero gratis para siempre</span>
             <span id="waitlistLoading" style="display: none;">Enviando...</span>
           </button>
           <div id="waitlistMessage" style="margin: 0; padding: 0; border-radius: 8px; display: none; text-align: left;"></div>
